# innowise_laboratory

lecture_1/: .gitignore  README.md  main.py  pyproject.toml
lecture_2/: main.py  pyproject.toml
lecture_3/: main.py  pyproject.toml
lecture_4/: .gitignore  pyproject.toml  query.sql  school.db
lecture_5/: .gitignore  pyproject.toml  requirements.txt
lecture_5/book_api/: books.db  database.py  main.py
lecture_5/book_api/api/: __init__.py  books.py  dependencies.py
lecture_5/book_api/models/: books.py
lecture_5/book_api/schemas/: books.py
lecture_6/: Dockerfile  main.py  pyproject.toml  requirements.txt
